# upload-async-service-live-proof

./: .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: build_info.py  main.py  models.py  object_store.py  store.py
ops/: deploy-contract.v1.yaml
tests/: test_app.py  test_object_storage_tool.py  test_restore_readback_tool.py  test_store.py
tools/proof/: object_storage.py  restore_readback.py
tools/repo/: check-project-closeout.ps1
