[build-system]
requires = ['setuptools>=69']
build-backend = 'setuptools.build_meta'

[project]
name = 'upload-async-service-live-proof'
version = '0.1.0'
description = 'Generic upload plus async processing live-proof app for coolify-01.'
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
  'boto3>=1.40,<1.41',
  'botocore>=1.40,<1.41',
  'fastapi>=0.120,<0.121',
  'psycopg[binary]>=3.2,<3.3',
  'pydantic>=2.12,<3',
  'python-multipart>=0.0.20,<0.0.21',
  'starlette>=0.49.1,<0.50',
  'uvicorn>=0.37,<0.38',
]

[dependency-groups]
dev = [
  'coverage[toml]>=7.10,<8',
  'deptry>=0.23,<0.24',
  'httpx>=0.28,<0.29',
  'pip-audit>=2.9,<3',
  'pre-commit>=4.3,<5',
  'pyright>=1.1.400,<1.2',
  'pytest>=8.4,<9',
  'pytest-cov>=6.2,<7',
  'ruff>=0.13,<0.14',
]

[tool.setuptools.packages.find]
include = ['app*']

[tool.pytest.ini_options]
addopts = '-q'
testpaths = ['tests']
markers = [
  'integration: requires a reachable PostgreSQL test database and object storage',
]

[tool.coverage.run]
branch = true
source = ['app']

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = 'py312'

[tool.ruff.lint]
select = ['E', 'F', 'I']

[tool.pyright]
include = ['app', 'tests', 'tools/proof']
typeCheckingMode = 'basic'
venvPath = '.'
venv = '.venv'

[tool.deptry.per_rule_ignores]
DEP002 = ['uvicorn', 'starlette', 'python-multipart']
